<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:text="@string/scan"
            android:background="@drawable/focus_selector"/>

        <Button
            android:id="@+id/license_plat_search_owner"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginTop="5px"
            android:layout_marginBottom="0dp"
            android:text="@string/license_plat_search_owner"
            android:background="@drawable/focus_selector"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginTop="5px"
            android:layout_marginBottom="0dp"
            android:text="@string/login"
            android:background="@drawable/focus_selector"/>

        <Button
            android:id="@+id/send_photo"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginTop="5px"
            android:layout_marginBottom="0dp"
            android:text="@string/send_photo"
            android:background="@drawable/focus_selector"/>

        <Button
            android:id="@+id/send_video"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginTop="5px"
            android:layout_marginBottom="0dp"
            android:text="@string/send_video"
            android:background="@drawable/focus_selector"/>

        <Button
            android:id="@+id/speech_converter"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:layout_marginTop="5px"
            android:layout_marginBottom="0dp"
            android:text="@string/speech_converter"
            android:background="@drawable/focus_selector"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/license_plate"
                android:layout_width="200dp"
                android:layout_height="142dp"
                android:src="@drawable/abc_tab_indicator_mtrl_alpha" />

            <TextView
                android:id="@+id/license_plate_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="licensePlate:" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>